# co2_win32_tray_notify

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake.yml
CO2Tracker/: CMakeLists.txt  CO2Tracker.cpp  CO2Tracker.h  CredentialsManager.cpp  CredentialsManager.h  MqttClient.cpp  MqttClient.h  NotificationIcon.rc  Resource.aps  Resource.rc  SettingsManager.cpp  SettingsManager.h  StateTranslator.cpp  StateTranslator.h  Strings.h  TrayWindow.cpp  TrayWindow.h  WinApiException.h  resource.h
